# llm-proxy

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  Agents.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_USAGE.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  SECURITY.md  STREAMING_USAGE_FIX.md  build.sh  cacerts.pem  cliff.toml  docker-compose.yml  main.py  proxy.py  pyproject.toml  run.sh
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
app/: main.py
docs/: adaptive_provider_routing.md  anthropic_beta.md  error_logger.md  gemini3.md  grafana_adaptive_panels.md  tool_use_pairing.md
examples/: gemini_transformer.lua
migrations/: 000001_init_dynamic_config.down.sql  000001_init_dynamic_config.up.sql  000002_auto_increment_ids.down.sql  000002_auto_increment_ids.up.sql  000003_add_provider_weight.down.sql  000003_add_provider_weight.up.sql  000004_add_provider_params.down.sql  000004_add_provider_params.up.sql  000004_add_request_logs.down.sql  000004_add_request_logs.up.sql  000005_add_error_logs.up.sql  000006_add_provider_request_to_error_logs.down.sql  000006_add_provider_request_to_error_logs.up.sql  000007_add_request_logs.down.sql  000007_add_request_logs.up.sql  000008_add_request_headers_to_request_logs.down.sql  000008_add_request_headers_to_request_logs.up.sql  000009_add_lua_script.down.sql  000009_add_lua_script.up.sql
prometheus/: prometheus.yml
python-server/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README_CN.md  REFACTORING.md  build.sh  docker-compose.yml  main.py  pyproject.toml  run.sh
python-server/app/: __init__.py  main.py
python-server/app/api/: __init__.py  admin.py  claude.py  completions.py  dependencies.py  gcp_vertex.py  health.py  metrics.py  models.py  proxy.py  router.py  upstream.py
python-server/app/core/: __init__.py  claude_constants.py  config.py  database.py  error_logger.py  error_types.py  exceptions.py  header_policy.py  http_client.py  jsonl_logger.py  langfuse_config.py  logging.py  metrics.py  middleware.py  rate_limiter.py  request_logger.py  security.py  stream_metrics.py  token_counter.py  tokenizer.py  utils.py
python-server/app/core/tokenizers/: __init__.py
python-server/app/models/: __init__.py  claude.py  config.py  health.py  provider.py
python-server/app/scripting/: __init__.py  engine.py  sandbox.py  transformer.py
python-server/app/services/: __init__.py  claude_converter.py  cooldown_service.py  health_check_service.py  langfuse_service.py  log_service.py  provider_service.py  response_api_converter.py
python-server/app/transformer/: __init__.py  base.py  detector.py  passthrough.py  pipeline.py  rectifier.py  registry.py  stream.py  unified.py
python-server/app/transformer/protocols/: __init__.py  anthropic.py  gcp_vertex.py  gemini.py  openai.py  response_api.py
python-server/app/utils/: __init__.py  client.py  gemini3.py  streaming.py
python-server/grafana/dashboards/: llm-proxy-dashboard.json
python-server/grafana/provisioning/datasources/: prometheus.yml
python-server/k8s/dev/: deploy.sh  k8s.yaml
python-server/python-server/tests/: test_v2_endpoints.py
python-server/scripts/: test.sh
python-server/tests/: __init__.py  conftest.py  test_api_completions.py  test_api_health.py  test_claude_api.py  test_client_disconnect.py  test_config.py  test_cooldown_service.py  test_database.py  test_gcp_vertex.py  test_gemini3.py  test_health_check.py  test_integration.py  test_jsonl_logger.py  test_lua_gemini_integration.py  test_lua_gemini_transformer.py  test_metrics.py  test_middleware.py  test_model_permission.py  test_models.py  test_properties.py  test_provider_service.py  test_proxy_v2.py  test_rate_limiting.py  test_remote_protocol_error.py  test_response_api_converter.py  test_scripting.py  test_security.py  test_stream_metrics.py  test_streaming.py  test_token_calculation.py  test_token_counter.py  test_tokenizer.py  test_transformer.py  test_utils.py  test_v2_endpoints.py  test_v2_token_calculation.py
rust-server/: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  README_CN.md  TESTING.md  build.sh  config-rsproxy.toml  debian-cn-sources.list  docker-compose.yml  test_endpoints.sh
rust-server/benches/: provider_selection.rs  request_handling.rs  transformer_bench.rs
rust-server/grafana/dashboards/: llm-proxy-dashboard.json
rust-server/grafana/provisioning/dashboards/: dashboard.yml
rust-server/prometheus/: prometheus.yml
rust-server/scripts/: bench.sh  coverage.sh  run_tests.sh
rust-server/src/: lib.rs  main.rs
rust-server/src/api/: admin.rs  auth.rs  claude.rs  claude_models.rs  disconnect.rs  gcp_vertex.rs  gemini3.rs  handlers.rs  health.rs  mod.rs  models.rs  proxy.rs  rectifier.rs  streaming.rs  upstream.rs
rust-server/src/core/: cancel.rs  config.rs  database.rs  error.rs  error_logger.rs  error_types.rs  header_policy.rs  jsonl_logger.rs  langfuse.rs  logging.rs  metrics.rs  middleware.rs  mod.rs  rate_limiter.rs  request_logger.rs  stream_metrics.rs  token_counter.rs  tokenizer.rs  utils.rs
rust-server/src/scripting/: bindings.rs  engine.rs  lua_feature.rs  mod.rs  sandbox.rs
rust-server/src/services/: claude_converter.rs  cooldown_service.rs  health_check_service.rs  log_service.rs  mod.rs  provider_service.rs  response_api_converter.rs
rust-server/src/transformer/: anthropic.rs  detector.rs  features.rs  gcp_vertex.rs  gemini.rs  mod.rs  openai.rs  passthrough.rs  response_api.rs  stream.rs  unified.rs
rust-server/tests/: integration_test.rs  mock_tests.rs  property_tests.proptest-regressions  property_tests.rs  test_claude_api.rs  test_client_disconnect.rs  test_cross_protocol.rs  test_gcp_vertex.rs  test_gemini3.rs  test_provider_logging.rs  test_proxy_v2.rs  test_rate_limiting.rs  test_tokenizer.rs  test_v2_auth.rs
scripts/: README.md  coverage.sh  install-githooks.mjs  test_rate_limit_manual.sh  verify_auth.sh
tests/: test_api_completions.py  test_api_health.py  (+7 more)
(+147 files in other folders)
