[project]
name = "tvs-llm-proxy"
version = "0.1.0"
description = "Simple Round-Robin LLM API Proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "urllib3>=2.6.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.20.0",
]
