[package]
name = "llm-proxy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Random selection
rand = "0.8"

# Environment variable expansion
regex = "1.10"

# UUID generation for request tracking
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

# Rate limiting
dashmap = "6.1"
governor = "0.7"
nonzero_ext = "0.3"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"

# HTTP mocking
mockito = "1.2"
wiremock = "0.6"

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Test utilities
tempfile = "3.8"
serial_test = "3.0"

# Assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Coverage
# Run with: cargo tarpaulin --out Html --output-dir coverage
# Install with: cargo install cargo-tarpaulin

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
debug = true

[[bench]]
name = "provider_selection"
harness = false

[[bench]]
name = "request_handling"
harness = false