[package]
name = "llm-proxy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json", "stream", "native-tls-vendored"] }
bytes = "1.5"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Pin home crate to version compatible with Rust 1.85
home = "=0.5.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Random selection
rand = "0.8"

# Environment variable expansion
regex = "1.10"

# UUID generation for request tracking
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

# Rate limiting
dashmap = "6.1"
governor = "0.7"
nonzero_ext = "0.3"

# Token counting
tiktoken-rs = "0.5"
# HuggingFace tokenizers for Claude/Cohere/Llama models
tokenizers = { version = "0.21", features = ["http"] }

# Lazy static initialization
lazy_static = "1.4"
once_cell = "1.19"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }

# Hot reload with ArcSwap
arc-swap = "1.7"

# Hashing for key storage
sha2 = "0.10"
hex = "0.4"

# Lua scripting engine
mlua = { version = "0.10", features = ["luajit", "vendored", "async", "send", "serialize", "macros", "anyhow"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI/Swagger documentation
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"

# HTTP mocking
mockito = "1.2"
wiremock = "0.6"

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Test utilities
tempfile = "3.8"
serial_test = "3.0"

# Assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Coverage
# Run with: cargo tarpaulin --out Html --output-dir coverage
# Install with: cargo install cargo-tarpaulin

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true

[profile.test]
opt-level = 0
debug = true

# Benchmark profile
[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

# Benchmark configuration
[[bench]]
name = "transformer_bench"
harness = false
